--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pylonsproject.org",
   "description": "pylonsproject.org",
-  "version": "0.1.17-dev",
+  "version": "0.1.4-dev",
   "author": "Pylons Project",
   "license": "MIT",
   "engines": [
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "rm -Rf build/*; webpack -d --colors --progress",
     "dist": "rm -Rf dist/*; webpack -p --colors --progress --config webpack.dist.config.js",
+    "docs": "rm -Rf dist/*; webpack -p --colors --progress --config webpack.dist.config.js; rm -Rf docs/; cp -R dist docs",
     "dev": "webpack-dev-server --progress --colors --content-base build --host 0.0.0.0"
   },
   "dependencies": {
@@ -26,7 +27,6 @@
     "jquery": "^3.1.1"
   },
   "devDependencies": {
-    "@tanepiper/robots-webpack-plugin": "^0.4.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "css-loader": "^0.26.1",
